--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\PTComptes.Common\packages.config" />
   <repository path="..\PTComptes.Model\packages.config" />
+  <repository path="..\PTComptes.Modules.Entites\packages.config" />
   <repository path="..\PTComptes.Modules.GestionOperations\packages.config" />
   <repository path="..\PTComptes\packages.config" />
 </repositories>
