--- a/PTComptes.Model/App.config
+++ b/PTComptes.Model/App.config
@@ -5,7 +5,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="mainContext" connectionString="data source=D:\users\gp.HARDIS\Desktop\PT_Comptes.db"
+    <add name="mainContext" connectionString="data source=D:\users\gp.HARDIS\Desktop\PT_Comptes.db;Foreign Keys=True"
       providerName="System.Data.SQLite" />
   </connectionStrings>
   <entityFramework>
